footer links alignment fixing

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -15,7 +15,7 @@ body {
 footer{
   width: 100vw;
   height: 300px;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(164, 59, 59);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,7 +29,7 @@ footer{
   height: 200px;
   margin: 0 auto;
   text-align: center;
-  background-color: black;
+  background-color: rgb(90, 30, 30);
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -42,23 +42,39 @@ footer{
 }
 #followus{
   height: 100px;
-  width: 20vw;
+  width: 30vw;
   text-align: center;
-  background-color: black;
+  background-color: rgb(131, 50, 50);
  display: flex;
  justify-content: center;
  justify-content: space-evenly;
  /* align-items: center; */
+}
+
+
+@media( max-width:600px){
+#followus{
+  width: 80vw;
+}
+
+}
+
+
+@media( max-width:500px){
+#followus{
+  width: 100vw;
+}
 }
 .followus{
   color: rgb(205, 181, 181);
   font-size: 20px;
   
   
+  
 }
 #center{
   width: 100vw;
-  background-color: black;
+  background-color: rgb(205, 136, 136);
   display: flex;
   justify-content: center;
 }
@@ -69,7 +85,7 @@ footer{
 
 
 #followheading{
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(129, 78, 78);
   width: 100vw;
   color: white;
   text-align: center;
